# discord-attendance-bot

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
cogs/: attendace.py  attendance.py  dev.py  instructor.py  presence.py  settings.py  sync.py
cogs/base/: common.py
cogs/enums/: embed_type.py
cogs/utils/: constants.py  descriptions.py  embed_generator.py  interaction_checks.py  macro.py  shelve_utils.py
cogs/views/: attendance_export.py
