[project]
name = "discord-attendance-bot"
version = "1.0.0"
description = "A simple Discord bot for taking and reporting attendance of users within a specific voice channel."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10.12"
dependencies = ["discord.py>=2.3.2", "python-dotenv>=1.0.0"]
